# examples

./: .cruft.json  404.html  CHANGELOG.md  README.md  example_of_examples.py  index.html  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
art/: logo.xcf  logo_large.xcf
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/contributing/1.-contributing-guide/: index.html
docs/contributing/2.-coding-standard/: index.html
docs/contributing/3.-code-of-conduct/: index.html
docs/contributing/4.-acknowledgements/: index.html
docs/quick_start/: 1.-installation.md  2.-adding-examples.md  3.-testing-examples.md
docs/quick_start/1.-installation/: index.html
docs/quick_start/2.-adding-examples/: index.html
docs/quick_start/3.-testing-examples/: index.html
examples/: __init__.py  api.py  example.py  example_objects.py  registry.py
examples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
htmlcov/: examples___init___py.html  examples_api_py.html  examples_example_objects_py.html  examples_example_py.html  examples_registry_py.html  index.html  status.json  tests___init___py.html  tests_example_module_fail_py.html  tests_example_module_pass_py.html  tests_no_examples_module_py.html  tests_test_api_py.html
pyzample/: pyproject.toml
reference/examples/: index.html
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
tests/: example_module_fail.py  example_module_pass.py  test_api.py  test_project_separate.py  test_registry.py
tests/example_project_separate/: api.py  api_examples.py
xamples/: pyproject.toml
(+3 files in other folders)
